добавил параметризованные тесты